--- a/client/src/pages/criar-login.html
+++ b/client/src/pages/criar-login.html
@@ -29,7 +29,7 @@
     <div class="login-side">
       <div class="my-form__wrapper">
         <div class="login-welcome-row">
-          <h1 class="h2">Bem vindo!</h1>
+          <h1 class="h1">Faça seu cadastro.</h1>
         </div>
 
         <section class="row">
@@ -56,6 +56,13 @@
             </div>
 
             <input type="submit" class="my-form__button" value="Cadastrar" />
+
+            <div class="my-form__actions">
+              
+              <div class="my-form__signup">
+                <a href="./login.html"> Voltar </a>
+              </div>
+            </div>
   
           </form>
 
