--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -46,14 +46,12 @@
           </div>
           <div class="text-field">
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" placeholder="Seu e-mail" required />
+            <input type="email" id="EmailLogin" name="email" placeholder="Seu e-mail" required />
             <img alt="Email Icon" title="Email Icon" src="../assets/icon/email.svg" />
           </div>
           <div class="text-field">
             <label for="password">Senha:</label>
-            <input id="password" type="password" name="password" placeholder="Sua senha" title="Minimum 6 characters at 
-                                    least 1 Alphabet, 1 Number and 1 Symbol"
-              pattern="^(?=.*[A-Za-z])(?=.*\d)(?=.*[\W_])[A-Za-z\d\W_]{6,}$" required />
+            <input id="SenhaLogin" type="password" name="password" placeholder="Sua senha" required />
             <img alt="Password Icon" title="Password Icon" src="../assets/icon/password.svg" />
           </div>
 
@@ -189,6 +187,7 @@
     AOS.init();
   </script>
 
+  <script type="module" src="../js/main.js" defer></script>
   <script type="module" src="../js/login.js" defer></script>
 
 
