--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -55,7 +55,7 @@
             <img alt="Password Icon" title="Password Icon" src="../assets/icon/password.svg" />
           </div>
 
-          <input type="submit" class="my-form__button" value="Login" id="login" />
+          <input type="submit" class="my-form__button" value="Login" id="logar" />
 
           <div class="my-form__actions">
             <div class="my-form__row">
