--- a/client/index.html
+++ b/client/index.html
@@ -67,7 +67,7 @@
               </div>
             </div>
 
-            <a id="login" class="contato login d-sm-none d-md-none d-lg-block text-center d-flex align-content-center " href="./src/pages/login.html" target="_blank">Login</a>
+            <a id="login" class="contato login d-sm-none d-md-none d-lg-block text-center d-flex align-content-center " href="http://localhost:5173/src/pages/login.html" target="_blank">Login</a>
 
           </div>
         </nav>
