--- a/client/src/pages/login.html
+++ b/client/src/pages/login.html
@@ -32,7 +32,7 @@
         <div class="login-welcome-row">
           <h1 class="h1">Bem vindo!</h1>
         </div>
-        <form class="my-form">
+        <form class="my-form" method="post">
           <div class="socials-row">
             <a href="#" title="Use Google">
               <img src="../assets/icon/google.png" alt="Google" />
@@ -55,7 +55,7 @@
             <img alt="Password Icon" title="Password Icon" src="../assets/icon/password.svg" />
           </div>
 
-          <input type="submit" class="my-form__button" value="Login" id="logar" />
+          <input type="button" class="my-form__button" value="Login" id="logar" />
 
           <div class="my-form__actions">
             <div class="my-form__row">
