feat: dropdown html, css, js

--- a/client/src/pages/criar-login.html
+++ b/client/src/pages/criar-login.html
@@ -51,7 +51,7 @@
               <img alt="Password Icon" title="Password Icon" src="../assets/icon/password.svg" />
             </div>
 
-            <button type="submit" class="my-form__button" value="Cadastrar" id="cadastrarLogin">Cadastrar</button>
+            <input type="submit" class="my-form__button" value="Cadastrar" id="cadastrarLogin">Cadastrar</input>
 
             <div class="my-form__actions">
               <div class="my-form__signup">
