--- a/client/src/pages/nosso-espaco.html
+++ b/client/src/pages/nosso-espaco.html
@@ -244,8 +244,8 @@
 
           <!--next prev button-->
           <div class="arrows">
-              <button class="prev"></i></button>
-              <button class="next">></button>
+              <button class="prev"> &larr;</button>
+              <button class="next"> &rarr;</button>
           </div>
 
 
