--- a/client/src/pages/criar-login.html
+++ b/client/src/pages/criar-login.html
@@ -34,7 +34,7 @@
 
         <section class="row">
 
-          <form class="my-form">
+          <form class="my-form" method="post">
             <div class="text-field">
               <label for="nome">Nome:</label>
               <input class="col-6" type="text" id="criarNome" name="nome" placeholder="Seu nome" required />
@@ -51,7 +51,7 @@
               <img alt="Password Icon" title="Password Icon" src="../assets/icon/password.svg" />
             </div>
 
-            <input type="submit" class="my-form__button" value="Cadastrar" id="cadastrarLogin">Cadastrar</input>
+            <input type="button" class="my-form__button" value="Cadastrar" id="cadastrarLogin" />
 
             <div class="my-form__actions">
               <div class="my-form__signup">
@@ -80,7 +80,7 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   
   <script type="module" src="../js/main.js" defer></script>
-  <script type="module" src="../js/login.js" defer></script>
+  <script type="module" src="../js/cadastrar.js" defer></script>
 
 </body>
 
