--- a/client/src/pages/galeria-salas.html
+++ b/client/src/pages/galeria-salas.html
@@ -82,10 +82,10 @@
               <nav>
                   <div class="profile__wrapper">
                       <img class="profile__avatar__drop " src="../assets/img/default-avatar.png" alt="Natalia">
-                      <div class="profile__info">
+                      <div id="profileInfo" class="profile__info">
                         <!-- NOME E EMAIL -->
-                          <h2 class="profile__name">Natalia Taylor</h2>
-                          <p class="profile__email">natalia.taylor@gmail.com</p>
+                          <!-- <h2 id="profile__name" class="profile__name">Natalia Taylor</h2>
+                          <p id="profile__email" class="profile__email">natalia.taylor@gmail.com</p> -->
                       </div>
                   </div>  
                   <hr class="divider">
@@ -136,39 +136,7 @@
 
       <hr class="divisor text-center m-auto m-5">
 
-      <div id="card" class="row row-cols-1 row-cols-md-2 g-4 mt-5">
-
-        <div  class="col-6">
-          <div class="card h-100 shadow">
-            <img src="../assets/img/oq2.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="h5 card-title text-start">Card title</p>
-              <p class="card-text text-description text-start">This is a wider card with supporting text below as a
-                natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-            <div class="card-footer text-end">
-              <small class="text-muted">Capaciade para </small>
-              <small class="text-muted">R$ valor pelo BD</small>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-6">
-          <div class="card h-100 shadow">
-            <img src="../assets/img/oq3.jpg" class="card-img-top" alt="...">
-            <div class="card-body">
-              <p class="h5 card-title text-start">Card title</p>
-              <p class="card-text text-description text-start">This card has supporting text below as a natural lead-in
-                to additional content.</p>
-            </div>
-            <div class="card-footer text-end d-flex justify-content-between">
-              <small class="text-muted">Capaciade para </small>
-              <small class="text-muted">R$ valor pelo BD</small>
-            </div>
-          </div>
-        </div>
-
-      </div>
+      <div id="card" class="row row-cols-1 row-cols-md-2 g-4 mt-5"></div>
 
     </div>
   </section>
